[tool.poetry]
name = "metaheuristic optimization"
version = "0.1.0"
description = "Metaheuristic optimization algorithms"
authors = ["Cameron Kinsella <ckinsella@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyyaml = "^6.0.1"
numpy = "^1.26.1"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
